--- a/VerilogGit_HW03_Homework.ipynb
+++ b/VerilogGit_HW03_Homework.ipynb
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "qLFl056PzboQ"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -108,11 +108,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "z2bL6zI9zUfj"
+        "id": "z2bL6zI9zUfj",
+        "outputId": "dafc2fd8-f803-45e6-d7ee-07a26a60d15c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The process occurred error, see below the error:\n",
+            "\n",
+            "code.v:14: syntax error\n",
+            "code.v:18: error: invalid module item.\n",
+            "code.v:19: syntax error\n",
+            "code.v:19: error: Invalid module instantiation\n",
+            "code.v:25: error: Invalid module instantiation\n",
+            "code.v:38: error: invalid module item.\n",
+            "code.v:42: error: 'count' has already been declared in this scope.\n",
+            "code.v:11:      : It was declared here as a variable.\n",
+            "code.v:43: error: 'ten' has already been declared in this scope.\n",
+            "code.v:12:      : It was declared here as a variable.\n",
+            "code.v:73: syntax error\n",
+            "I give up.\n",
+            "\n",
+            "VCD info: dumpfile decade_counter.vcd opened for output.\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "%%verilog\n",
         "\n",
@@ -125,6 +153,28 @@
         ");\n",
         "\n",
         "//YOUR CODE HERE\n",
+        "reg [3:0]count;\n",
+        "reg ten\n",
+        "\n",
+        "always @(posedge clk)\n",
+        "begin\n",
+        "  if (rst != 1'b0)\n",
+        "      begin\n",
+        "      count = 4'b0000;\n",
+        "      ten = 1'b0\n",
+        "      end\n",
+        "\n",
+        "  else if (count == 4'b1001)\n",
+        "      begin\n",
+        "      count = 4'b0000;\n",
+        "      ten = ten + 1'b1;\n",
+        "      end\n",
+        "  else\n",
+        "      begin\n",
+        "      count = count + 1'b1\n",
+        "      ten = 1'b0\n",
+        "      end\n",
+        "end\n",
         "\n",
         "endmodule\n",
         "////\n",
@@ -147,14 +197,23 @@
         "always begin\n",
         "\n",
         "    //YOUR CODE HERE - Generate 20 unit time clock;\n",
+        "  #10 clk =~ clk;\n",
         "\n",
         "end\n",
         "\n",
         "initial begin\n",
-        "\n",
+        "    begin\n",
+        "    $dumpfile(\"decade_counter.vcd\");\n",
+        "    $dumpvars(0, decade_counter_tb);\n",
+        "    clk = 1'b0;\n",
+        "    rst = 1'b1;\n",
+        "    #30 rst = 1'b0;\n",
+        "    #430 $finish;\n",
         "    //YOUR CODE HERE - Initialize the clk, rst;\n",
         "\n",
         "end\n",
+        "    //initial\n",
+        "    //$monitor($time, \" clk=%b,rst=%b,count[3:0]=%b,ten=%b\",clk,rst,count,ten);\n",
         "\n",
         "endmodule\n"
       ]
